update - checking indentation - change logo about on home - change color of theater box card

--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -71,7 +71,8 @@
                         <% }); %>
                 </div>
             </div>
-            <button class="px-4 py-2 mt-8 text-sm font-semibold text-white bg-red-600 rounded-lg hover:bg-red-800">Logout</button>
+            <button
+                class="px-4 py-2 mt-8 text-sm font-semibold text-white bg-red-600 rounded-lg hover:bg-red-800">Logout</button>
         </div>
     </div>
     </div>
