--- a/views/cancel.ejs
+++ b/views/cancel.ejs
@@ -32,7 +32,8 @@
 <body class="mx-20 bg-black text-cfab7a font-raleway">
   <div class="container mx-auto space-y-4">
     <h1 class="py-5 mx-5 mt-10 text-4xl font-extrabold">Cancel Ticket</h1>
-    <p class="py-5 mx-5 text-xl">Your presence is truly missed! We'd love to welcome you back for another unforgettable movie night.</p>
+    <p class="py-5 mx-5 text-xl">Your presence is truly missed! We'd love to welcome you back for another unforgettable
+      movie night.</p>
     <div class="py-5 text-center">
       <button id="cancelButton" onclick="cancelSeats()"
         class="px-4 py-2 rounded custom-btn border-cfab7a text-cfab7a">Cancel</button>
