--- a/views/home.ejs
+++ b/views/home.ejs
@@ -88,8 +88,7 @@
                 <h1 class="mb-6 text-4xl font-semibold text-cfab7a">Welcome to TixOnline</h1>
                 <p class="mb-8 text-lg text-cfab7a">Buy movie tickets online and never miss your favorite movies
                     again!</p>
-                <a href="/movies"
-                    class="px-6 py-2 font-normal font-semibold text-black rounded custom-btn">Get
+                <a href="/movies" class="px-6 py-2 font-normal font-semibold text-black rounded custom-btn">Get
                     Started</a>
             </div>
         </div>
@@ -144,35 +143,30 @@
                     TixOnline.</p>
                 <div class="flex flex-wrap justify-center">
                     <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                            class="w-12 h-12 mx-auto mb-4 text-red-600">
-                            <path fill="none" d="M0 0h24v24H0z" />
-                            <path
-                                d="M12 2a10 10 0 1 1 0 20 10 10 0 0 1 0-20zm0 2a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm0 3a2 2 0 1 1-.001 3.999A2 2 0 0 1 11 7zm2 9H9v-2h4v2z"
-                                fill="rgba(255,255,255,1)" />
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-12 h-12 mx-auto mb-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M16.5 6v.75m0 3v.75m0 3v.75m0 3V18m-9-5.25h5.25M7.5 15h3M3.375 5.25c-.621 0-1.125.504-1.125 1.125v3.026a2.999 2.999 0 010 5.198v3.026c0 .621.504 1.125 1.125 1.125h17.25c.621 0 1.125-.504 1.125-1.125v-3.026a2.999 2.999 0 010-5.198V6.375c0-.621-.504-1.125-1.125-1.125H3.375z" />
                         </svg>
                         <h3 class="mb-2 text-xl font-semibold ">Easy Ticket Booking</h3>
                         <p>Book your movie tickets in just a few clicks without any hassle.</p>
                     </div>
+
                     <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                            class="w-12 h-12 mx-auto mb-4 text-red-600">
-                            <path fill="none" d="M0 0h24v24H0z" />
-                            <path
-                                d="M20 11H4v2h16v-2zm0-4H4v2h16V7zm0 8H4v2h16v-2zm0 4h-2v2h2v-2zm2-8h-2v2h2v-2zm0-4h-2v2h2V7zm0 8h-2v2h2v-2zm0 4h-2v2h2v-2zm2-8h-2v2h2v-2zm0-4h-2v2h2V7zm0 8h-2v2h2v-2zm0 4h-2v2h2v-2zm2-8h-2v2h2v-2zm0-4h-2v2h2V7zm0 8h-2v2h2v-2zm0 4h-2v2h2v-2zm2-8h-2v2h2v-2z"
-                                fill="rgba(255,255,255,1)" />
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-12 h-12 mx-auto mb-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M3.375 19.5h17.25m-17.25 0a1.125 1.125 0 01-1.125-1.125M3.375 19.5h1.5C5.496 19.5 6 18.996 6 18.375m-3.75 0V5.625m0 12.75v-1.5c0-.621.504-1.125 1.125-1.125m18.375 2.625V5.625m0 12.75c0 .621-.504 1.125-1.125 1.125m1.125-1.125v-1.5c0-.621-.504-1.125-1.125-1.125m0 3.75h-1.5A1.125 1.125 0 0118 18.375M20.625 4.5H3.375m17.25 0c.621 0 1.125.504 1.125 1.125M20.625 4.5h-1.5C18.504 4.5 18 5.004 18 5.625m3.75 0v1.5c0 .621-.504 1.125-1.125 1.125M3.375 4.5c-.621 0-1.125.504-1.125 1.125M3.375 4.5h1.5C5.496 4.5 6 5.004 6 5.625m-3.75 0v1.5c0 .621.504 1.125 1.125 1.125m0 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125m1.5-3.75C5.496 8.25 6 7.746 6 7.125v-1.5M4.875 8.25C5.496 8.25 6 8.754 6 9.375v1.5m0-5.25v5.25m0-5.25C6 5.004 6.504 4.5 7.125 4.5h9.75c.621 0 1.125.504 1.125 1.125m1.125 2.625h1.5m-1.5 0A1.125 1.125 0 0118 7.125v-1.5m1.125 2.625c-.621 0-1.125.504-1.125 1.125v1.5m2.625-2.625c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125M18 5.625v5.25M7.125 12h9.75m-9.75 0A1.125 1.125 0 016 10.875M7.125 12C6.504 12 6 12.504 6 13.125m0-2.25C6 11.496 5.496 12 4.875 12M18 10.875c0 .621-.504 1.125-1.125 1.125M18 10.875c0 .621.504 1.125 1.125 1.125m-2.25 0c.621 0 1.125.504 1.125 1.125m-12 5.25v-5.25m0 5.25c0 .621.504 1.125 1.125 1.125h9.75c.621 0 1.125-.504 1.125-1.125m-12 0v-1.5c0-.621-.504-1.125-1.125-1.125M18 18.375v-5.25m0 5.25v-1.5c0-.621.504-1.125 1.125-1.125M18 13.125v1.5c0 .621.504 1.125 1.125 1.125M18 13.125c0-.621.504-1.125 1.125-1.125M6 13.125v1.5c0 .621-.504 1.125-1.125 1.125M6 13.125C6 12.504 5.496 12 4.875 12m-1.5 0h1.5m-1.5 0c-.621 0-1.125.504-1.125 1.125v1.5c0 .621.504 1.125 1.125 1.125M19.125 12h1.5m0 0c.621 0 1.125.504 1.125 1.125v1.5c0 .621-.504 1.125-1.125 1.125m-17.25 0h1.5m14.25 0h1.5" />
                         </svg>
                         <h3 class="mb-2 text-xl font-semibold ">Wide Movie Selection</h3>
                         <p>Choose from a wide range of movies and genres to suit your preferences.
                         </p>
                     </div>
                     <div class="w-full p-4 sm:w-1/2 md:w-1/3 lg:w-1/4">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
-                            class="w-12 h-12 mx-auto mb-4 text-red-600">
-                            <path fill="none" d="M0 0h24v24H0z" />
-                            <path
-                                d="M12 2L2 7l10 5 10-5-10-5zm0 2.276L20.566 7 12 11.724 3.434 7 12 4.276zm0 11.448L2 13l10-5 10 5-10 5zm0 2.276L20.566 19 12 14.276 3.434 19 12 21.724z"
-                                fill="rgba(255,255,255,1)" />
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-12 h-12 mx-auto mb-4">
+                            <path stroke-linecap="round" stroke-linejoin="round"
+                                d="M2.25 8.25h19.5M2.25 9h19.5m-16.5 5.25h6m-6 2.25h3m-3.75 3h15a2.25 2.25 0 002.25-2.25V6.75A2.25 2.25 0 0019.5 4.5h-15a2.25 2.25 0 00-2.25 2.25v10.5A2.25 2.25 0 004.5 19.5z" />
                         </svg>
                         <h3 class="mb-2 text-xl font-semibold ">Secure Online Payments</h3>
                         <p>Make your payments securely with our trusted payment gateways.</p>
