--- a/views/success.ejs
+++ b/views/success.ejs
@@ -35,21 +35,29 @@
     <div class="flex items-center px-5 py-3 mb-3 space-x-10 text-sm">
       <div class="flex flex-col">
         <span class="text-lg">Theater</span>
-        <div class="text-lg font-semibold"><%= tickets[0].theater_name %></div>
+        <div class="text-lg font-semibold">
+          <%= tickets[0].theater_name %>
+        </div>
       </div>
       <div class="flex flex-col">
         <span class="text-lg">Date</span>
-        <div class="text-lg font-semibold"><%= tickets[0].date %></div>
+        <div class="text-lg font-semibold">
+          <%= tickets[0].date %>
+        </div>
       </div>
     </div>
     <div class="flex items-center px-5 mb-3 space-x-10 text-sm">
       <div class="flex flex-col">
         <span class="text-lg">Seats</span>
-        <div class="text-lg font-semibold"><%= tickets[0].seat_number %></div>
+        <div class="text-lg font-semibold">
+          <%= tickets[0].seat_number %>
+        </div>
       </div>
       <div class="flex flex-col">
         <span class="text-lg">Time</span>
-        <div class="text-lg font-semibold"><%= tickets[0].hours %></div>
+        <div class="text-lg font-semibold">
+          <%= tickets[0].hours %>
+        </div>
       </div>
     </div>
     <ul>
