--- a/views/theaters-list.ejs
+++ b/views/theaters-list.ejs
@@ -67,15 +67,15 @@
     <div class="container mx-auto">
       <h1 class="mb-4 text-4xl font-semibold text-cfab7a">Theaters List</h1>
       <form id="filterForm" action="/schedules-theater/<%= theater.theater_id %>" method="GET">
-        <select id="selectedCity" name="selectedCity" class="px-4 py-2 mr-4 bg-black border-2 rounded border-cfab7a"
-          onchange="this.form.submit();">
+        <select id="selectedCity" name="selectedCity"
+          class="px-4 py-2 mr-4 bg-black border-2 rounded cursor-pointer border-cfab7a" onchange="this.form.submit();">
           <% cities.forEach((city)=> { %>
             <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
             </option>
             <% }) %>
         </select>
-        <select id="selectedDate" name="selectedDate" class="px-4 py-2 mr-4 bg-black border-2 rounded border-cfab7a"
-          onchange="this.form.submit();">
+        <select id="selectedDate" name="selectedDate"
+          class="px-4 py-2 mr-4 bg-black border-2 rounded cursor-pointer border-cfab7a " onchange="this.form.submit();">
           <% dateSelector.forEach((date)=> { %>
             <option value="<%= date.date %>" <% if(date.date==dateFilter){ %> selected <%}%>><%= date.date %>
             </option>
@@ -88,7 +88,7 @@
   <div class="container grid grid-cols-1 gap-4 p-4 mx-auto text-cfab7a sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
     <% theaters.forEach(function(theater) { %>
       <a href="/schedules-theater/<%= theater.theater_id %>?selectedCity=<%=cityFilter%>&selectedDate=<%=dateFilter%>"
-        class="flex flex-col max-w-sm overflow-hidden transition-all duration-200 transform bg-gray-800 rounded shadow-lg hover:scale-105">
+        class="flex flex-col max-w-sm overflow-hidden transition-all duration-200 transform rounded shadow-lg custom-btn hover:scale-105">
         <img class="object-cover w-full h-64" src='/images/<%= theater.theater_images %> ' alt="<%= theater.city %>">
         <div class="flex-grow px-6 py-4">
           <div class="mb-2 text-xl font-bold">
