--- a/views/home.ejs
+++ b/views/home.ejs
@@ -67,7 +67,7 @@
             <div class="kodfun-galeri">
                 <% moviesShowing.forEach(function(movieShowing) { %>
                     <div style="background-image: url('/images/<%= movieShowing.images %>');"
-                        onclick="showMovieDetails('<%= movieShowing.title %>','<%= movieShowing.synopsis %>','<%= movieShowing.movie_id %>')">
+                        onclick="showMovieDetails('<%= movieShowing.title %>','<%= movieShowing.synopsis %>','<%= movieShowing.movie_id %>','<%= movieShowing.release_date %>', 'TRUE')">
                         <div class="overlay">
                             <h4 class="font-semibold ">
                                 <%= movieShowing.title %>
@@ -100,7 +100,8 @@
             <h1 class="mb-4 text-4xl font-semibold ">Coming Soon</h1>
             <div class="kodfun-galeri">
                 <% moviesUpcoming.forEach(function(movieUpcoming) { %>
-                    <div style="background-image: url('/images/<%= movieUpcoming.images %>');">
+                    <div style="background-image: url('/images/<%= movieUpcoming.images %>');"
+                        onclick="showMovieDetails('<%= movieUpcoming.title %>','<%= movieUpcoming.synopsis %>','<%= movieUpcoming.movie_id %>', '<%= movieUpcoming.release_date %>', 'FALSE')">
                         <div class="overlay">
                             <h4 class="font-semibold ">
                                 <%= movieUpcoming.title %>
@@ -129,6 +130,7 @@
             </div>
             <h2 id="movieTitle" class="mb-4 text-2xl font-semibold text-white lg"></h2>
             <p id="movieSynopsis" class="mb-4 text-cfab7a"></p>
+            <p id="movieReleasedate" class="mb-4 text-cfab7a"></p>
             <a id="movieLink" class="px-4 py-2 font-semibold text-white bg-red-600 rounded hover:bg-red-700">Book
                 Now</a>
         </div>
