--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -47,6 +47,7 @@
   <section id="movieList" class="bg-black py-16 text-[#cfab7a]">
     <div class="container mx-auto">
       <h1 class="mb-4 text-4xl font-semibold">Now Playing</h1>
+      <a href="/theaters">Find by Location</a>
       <form id="filterForm" action="/schedules-movie/<%= movie.movie_id %>" method="GET" class="mb-4">
         <select id="selectedCity" name="selectedCity"
           class="px-4 py-2 mr-4 bg-black border-2 rounded cursor-pointer border-cfab7a" onchange="this.form.submit();">
