--- a/views/theaters-list.ejs
+++ b/views/theaters-list.ejs
@@ -66,6 +66,7 @@
   <section id="filter" class="bg-black py-10 text-[#cfab7a]">
     <div class="container mx-auto">
       <h1 class="mb-4 text-4xl font-semibold text-cfab7a">Theaters List</h1>
+      <a href="/movies">Find by Movie</a>
       <form id="filterForm" action="/schedules-theater/<%= theater.theater_id %>" method="GET">
         <select id="selectedCity" name="selectedCity"
           class="px-4 py-2 mr-4 bg-black border-2 rounded cursor-pointer border-cfab7a" onchange="this.form.submit();">
