--- a/views/theaters.ejs
+++ b/views/theaters.ejs
@@ -44,20 +44,24 @@
 
   <!--Filter-->
   <section id="filter" class="bg-black py-10 text-[#cfab7a] ">
-    <div class="container mx-auto">
-      <h1 class="mb-6 text-4xl font-semibold text-cfab7a">Theaters List</h1>
-      <a href="/movies">Find by Movie</a>
+    <section id="filter" class="bg-black py-10 text-[#cfab7a]">
+      <div class="container mx-auto">
+        <h1 class="mb-6 text-4xl font-semibold text-cfab7a mx-5">Theaters List</h1>
+      </div>
+    </section>
+    
+    <div class="container mx-auto flex items-center bg-black py-4">
+      <a href="/movies" class="text-[#cfab7a] mx-5 cursor-pointer">Find by Movie</a>
       <form id="filterForm" action="/theaters" method="GET">
-        <select id="selectedCity" name="selectedCity" class="px-4 py-2 mr-4 bg-black border-2 rounded cursor-pointer border-cfab7a"
-          onchange="this.form.submit();">
-          <% cities.forEach((city)=> { %>
-            <option value="<%= city.city %>" <% if(city.city==cityFilter){ %> selected <%}%>><%= city.city %>
-            </option>
-            <% }) %>
+        <select id="selectedCity" name="selectedCity" class="px-4 py-2 bg-black border-2 rounded cursor-pointer border-cfab7a" onchange="this.form.submit();">
+          <% cities.forEach((city) => { %>
+            <option value="<%= city.city %>" <% if(city.city == cityFilter) { %> selected <% } %>><%= city.city %></option>
+          <% }) %>
         </select>
       </form>
     </div>
-  </section>
+    
+  
 
   <div class="container grid grid-cols-1 gap-4 p-4 mx-auto text-cfab7a sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
     <% const today=new Date(); today.setHours(today.getHours() + 7); today.toISOString().split('T')[0];%>
