--- a/views/admin-theaters-add.ejs
+++ b/views/admin-theaters-add.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Create Movie</title>
+  <title>Admin | Add Theater</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
