--- a/views/admin-theaters-edit.ejs
+++ b/views/admin-theaters-edit.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Create Movie</title>
+  <title>Admin | Edit Theater </title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
   </div>
   <div class="flex flex-col items-center justify-start h-screen pt-20">
     <div>
-      <h1 class="mb-3 text-3xl font-semibold">Create Theater</h1>
+      <h1 class="mb-3 text-3xl font-semibold">Edit Theater</h1>
       <form action="/edit-theater/<%=theater.theater_id%>" method="POST" enctype="multipart/form-data"
         class="w-full max-w-lg p-8 rounded-md gold-btn">
         <div class="flex flex-wrap mb-3 -mx-3">
