--- a/views/admin-movies.ejs
+++ b/views/admin-movies.ejs
@@ -53,7 +53,7 @@
         <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
       </header>
       <div class="flex justify-end py-4">
-        <a href="/admin/movies/add" class="px-4 py-2 mb-4 text-black rounded-md custom-btn">Add New Item</a>
+        <a href="/admin/movies/add" class="px-4 py-2 mb-4 text-black rounded-md custom-btn">Add New Movies</a>
       </div>
       <div class="table-container">
         <table class="w-full px-16 py-4 whitespace-no-wrap border-2 table-auto border-gold table-striped">
