--- a/views/admin-schedules-add.ejs
+++ b/views/admin-schedules-add.ejs
@@ -79,7 +79,7 @@
           <div class="w-full px-3 py-4 text-right">
             <input
               class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline"
-              type="submit" value="Book Now">
+              type="submit" value="Submit">
           </div>
         </div>
       </form>
