--- a/views/admin-seats-edit.ejs
+++ b/views/admin-seats-edit.ejs
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="w-full px-3 py-4 text-right">
-            <input type="submit" value="Book Now"
+            <input type="submit" value="Submit"
               class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline">
           </div>
         </div>
