--- a/views/admin-studios-add.ejs
+++ b/views/admin-studios-add.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Movie Ticket Booking</title>
+  <title>Admin | Add Studio</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
   </div>
   <div class="flex flex-col items-center justify-start h-screen pt-20">
     <div>
-      <h1 class="mb-3 text-3xl font-semibold">Movie Ticket Booking</h1>
+      <h1 class="mb-3 text-3xl font-semibold">Create Studio</h1>
       <form action="/create-studio" method="POST" class="w-full max-w-lg p-8 rounded-md gold-btn">
         <div class="flex flex-wrap mb-3 -mx-3">
           <div class="w-full px-3 mb-3">
@@ -73,7 +73,7 @@
           <div class="w-full px-3 py-4 text-right">
             <input
               class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline"
-              type="submit" value="Book Now">
+              type="submit" value="Submit">
           </div>
         </div>
       </form>
@@ -91,7 +91,7 @@
         var citySelect = document.getElementById('city');
         var theaterSelect = document.getElementById('theater');
         var selectedCity = citySelect.value;
-        var theaterOptions = <% - JSON.stringify(theaters) %>;
+        var theaterOptions = <%- JSON.stringify(theaters) %>;
 
         while (theaterSelect.options.length > 0) {
           theaterSelect.options[0].remove();
