--- a/views/admin-studios-edit.ejs
+++ b/views/admin-studios-edit.ejs
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Movie Ticket Booking</title>
+  <title>Admin | Edit Studio</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles/fe_style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -53,7 +53,7 @@
             </select>
           </div>
           <div class="w-full px-3 py-4 text-right">
-            <input type="submit" value="Book Now"
+            <input type="submit" value="Submit"
               class="px-4 py-2 font-bold text-black text-white bg-red-600 rounded cursor-pointer hover:bg-red-800 focus:outline-none focus:shadow-outline">
           </div>
         </div>
