--- a/views/admin-theaters.ejs
+++ b/views/admin-theaters.ejs
@@ -53,7 +53,7 @@
         <a href="/" class="text-4xl font-semibold hover:text-white">TixOnline</a>
       </header>
       <div class="flex justify-end px-6 py-4">
-        <a href="/admin/theaters/add" class="px-4 py-2 mb-4 text-black rounded-md custom-btn">Add New Item</a>
+        <a href="/admin/theaters/add" class="px-4 py-2 mb-4 text-black rounded-md custom-btn">Add New Theater</a>
       </div>
       <table class="w-full whitespace-no-wrap border-2 table-auto border-gold table-striped">
         <thead>
